# mrc_eo

./: README.md
mrc_eo/: CMakeLists.txt  package.xml
mrc_eo/config/: ros.yaml  yolov3-tiny_cam.yaml  yolov3-tiny_lidar.yaml
mrc_eo/include/mrc_eo/: CamObjectDetector.hpp  FusionResult.hpp  LidarObjectDetector.hpp  LidarProjection.hpp  LidarProjectionOri.hpp  LidarProjectionPC.hpp  SensorDiagnostic.hpp  YoloObjectDetector.hpp  image_interface.h
mrc_eo/launch/: mrc_eo.launch
mrc_eo/src/: CamObjectDetector.cpp  FusionResult.cpp  LidarObjectDetector.cpp  LidarProjection.cpp  LidarProjectionOri.cpp  LidarProjectionPC.cpp  SensorDiagnostic.cpp  image_interface.c  mrc_eo_node.cpp
mrc_eo/yolo_network_config/cfg/: yolov3-tiny_old.cfg
mrc_eo_msgs/: CMakeLists.txt  package.xml
mrc_eo_msgs/action/: CheckForObjects.action
mrc_eo_msgs/msg/: BoundingBox.msg  Diagnostic.msg  FusionResult.msg
