<?xml version="1.0"?>
<package>
  <name>mrc_eo_msgs</name>
  <version>1.1.4</version>
  <description>mrc-eo message</description>
  <maintainer email="rotnn429@gmail.com">Jung Eun Lee</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/je5349/mrc_eo</url>
  <author email="rotnn429@gmail.com">Jung Eun Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
